--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 
 .header {
     background-image: url(../img/football_767.jpg);
-    background-color: #5e42b0;
+    background-color: #0a0e34;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -42,6 +42,7 @@ body {
 }
 
 .logo {
+    fill: #fff;
     width: 133px;
     margin-left: auto;
     margin-right: auto;
