--- a/css/style.css
+++ b/css/style.css
@@ -38,10 +38,11 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    opacity: 0.1;
+    opacity: 0.9;
 }
 
 .logo {
+    display: block;
     fill: #fff;
     width: 133px;
     margin-left: auto;
