--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
     min-height: 568px;
 }
 
-.header::after {
+.header::before {
     content: "";
     background-color: #0a0e34;
     position: absolute;
@@ -41,12 +41,18 @@ body {
     opacity: 0.9;
 }
 
+.container {
+    position: relative;
+    z-index: 1;
+}
+
 .logo {
     display: block;
     fill: #fff;
     width: 133px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 33px;
 }
 
 .title {
