--- a/css/style.css
+++ b/css/style.css
@@ -47,11 +47,9 @@ body {
 }
 
 .logo {
-    display: block;
     fill: #fff;
     width: 133px;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
     margin-top: 33px;
 }
 
