--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,12 @@ body {
 }
 
 .logo {
+    display: flex;
     fill: #fff;
     width: 133px;
-    justify-content: center;
     margin-top: 33px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .title {
