--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
     background-color: #0a0e34;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    position: absolute;
     min-width: 320px;
     flex-shrink: 0;
     min-height: 568px;
