--- a/css/style.css
+++ b/css/style.css
@@ -80,12 +80,13 @@ body {
 
 .button {
     background-color: #5e42b0;
-    display: flex;
+    display: block;
     border-radius: 24px;
 }
 
 .brand_logo {
     fill: white;
+    height: 24px;
 }
 
 .button_text {
@@ -94,5 +95,5 @@ body {
 
 .button_brand {
     font-weight: bold;
-    height: 24px;
+
 }
