--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@ body {
     position: absolute;
     min-width: 320px;
     flex-shrink: 0;
-    min-height: 568px;
 }
 
 .header::after {
@@ -75,7 +74,7 @@ body {
 
 .title_right {
     margin-left: 63px;
-    display: inline-block;
+    /*display: inline-block;*/
 }
 
 .buttons {
