--- a/css/style.css
+++ b/css/style.css
@@ -77,19 +77,27 @@ body {
 
 .buttons {
     display: flex;
+    flex-direction: column;
 }
 
 .button {
     border: 1px solid black;
     border-radius: 24px;
     display: flex;
-    vertical-align: center;
+    align-items: center;
+    justify-content: center;
+    background-color: #5e42b0;
+    width: 280px;
+    height: 35px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .button_brand_logo {
     width: auto;
     height: 24px;
     fill: white;
+    padding-right: 10px;
 }
 
 .button_text {
