--- a/css/style.css
+++ b/css/style.css
@@ -55,12 +55,13 @@ body {
 
 .svg_text {
     display: flex;
+    padding-top: 33px;
 }
 
 .logo_text {
     fill: #fff;
     width: 133px;
-    margin: 33px auto 10px;
+    margin: 0 auto 10px;
 }
 
 .title {
@@ -323,6 +324,7 @@ body {
 
 .logo {
     margin: 12px 6px;
+    width: 60px;
     fill: white;
 }
 
